# plate-simulation

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Install_or_Update.bat  README-dev.rst  README.rst  THIRD_PARTY_SOFTWARE.rst  install.bat  py-3.10.conda-lock.yml  py-3.9.conda-lock.yml  pyproject.toml  readthedocs.yml
.github/workflows/: issue_to_jira.yml  pytest-unix-os.yml  pytest-windows.yml  static-analysis.yml
devtools/: add_url_tag_sha256.py  check-copyright.py  git_message_hook.py  rename_my_app.py  run_conda_lock.py  setup-conda-base.bat  start-app.bat
docs/source/: THIRD_PARTY_SOFTWARE.rst  conf.py  getting_started.rst  index.rst  methodology.rst  usage.rst
docs/source/images/methodology/: make_plate_images.pub
environments/: py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.9-linux-64-dev.conda.lock.yml  py-3.9-linux-64.conda.lock.yml  py-3.9-win-64-dev.conda.lock.yml  py-3.9-win-64.conda.lock.yml
my_app/: __init__.py  main.py
my_app-assets/: __init__.py
my_app/commands/: __init__.py  hello_world.py
plate_simulation/: __init__.py  driver.py  logger.py  main.py  params.py  utils.py
plate_simulation-assets/: __init__.py  demo.geoh5
plate_simulation-assets/uijson/: hello.ui.json  plate_simulation.ui.json  point_simulations.ui.json  simulation_series.ui.json
plate_simulation/commands/: __init__.py  hello_world.py
plate_simulation/mesh/: params.py
plate_simulation/models/: __init__.py  events.py  main.py  params.py  plates.py  series.py
plate_simulation/point_simulations/: driver.py  params.py
plate_simulation/series/: __init__.py  driver.py  params.py
plate_simulation/simulations/: params.py
tests/: __init__.py  assets_path_test.py  version_test.py
tests/models/: __init__.py  events_test.py  halfspace_test.py  params_test.py  plates_test.py  series_test.py
tests/runtest/: __init__.py  driver_test.py  gravity_test.py
tests/utils/: utils_test.py
