[tool.poetry]
name = "plate-simulation"
version = "0.1.0-alpha.1"
license = "MIT"
description = "plate-simulation is a Python package"
authors = ["Mira Geoscience <support@mirageoscience.com>"]
repository = "https://github.com/MiraGeoscience/plate-simulation"
homepage = "https://mirageoscience.com"
readme = "README.rst"
packages = [
     { include = "plate_simulation" },
     { include = "plate_simulation-assets" },
]

# TODO: adjust classifiers
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Natural Language :: English",
]


[tool.poetry.dependencies]
python = "^3.9, <3.11"
numpy = "~1.23.5"  # also geoh5py
trimesh = "~4.1.3" # =3.12.9
discretize = "~0.10.0"
Rtree = "~1.2.0"

## pip dependencies
geoh5py = {version = "~0.9.0a1", source = "pypi", allow-prereleases = true}
#geoh5py = { url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/heads/main.tar.gz#sha256=" }
octree-creation-app = {version = "0.1.0a2", source = "pypi", allow-prereleases = true}
#octree-creation-app = {url="https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/develop.zip#sha256="}
mira-simpeg = {version = "~0.19.0.dev4", source = "pypi", optional = true}
#simpeg-drivers = {version = "~0.1.0-alpha.1", source = "pypi", allow-prereleases = true}
simpeg-drivers = { url = "https://github.com/MiraGeoscience/simpeg-drivers/archive/refs/heads/develop.zip#sha256=" }

## indirect dependencies, forcing them here for installation through Conda not pip
h5py = "*" # from geoh5py
Pillow = "*" # from geoh5py
dask = {version = "2022.10.*", extras = ["distributed"]}
distributed = {version = "2022.10.*"}  # because conda-lock doesn't take dask extras into account
geoana = {version = "~0.4.0"}  # from simpeg
mkl = {version = "2022.*"} # from simpeg
pydiso = {version = "~0.0.3", optional = true} # from simpeg
pymatsolver = {version = "~0.2.0", optional = true} # from simpeg
zarr = {version = "~2.14.2", optional = true} # from simpeg using Dask

## about pip dependencies
# to be specified to work with conda-lock
# - from PyPI: my_package = { version = "1.2.3", source = "pypi" }
# - from URL:
#   - for a tags:   my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/tags/VERSION_TAG.zip#sha256=" }
#   - for a branch: my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/heads/BRANCH.zip#sha256=" }
# Note - conda-lock does not support the syntax: my_package = { git = ... }
#        while poetry2conda supports only { git = "...", tag = "..." }, and not { url = ... }

[tool.poetry.group.dev.dependencies]
Pygments = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
tomli = "*"

[tool.conda-lock]
platforms = ['win-64', 'linux-64']
channels = ['conda-forge']

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
# defaults are just fine

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
scripts_are_modules = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true

plugins = [
    "numpy.typing.mypy_plugin"
]

[tool.pytest.ini_options]
#addopts =

[tool.coverage.run]
branch = true
source = ["plate_simulation"]
omit = [
    "plate_simulation/commands/hello_world.py"
]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
    "if TYPE_CHECKING",
    "pragma: no cover"
]

fail_under = 80

[tool.coverage.html]
skip_empty = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
