[tool.poetry]
name = "plate-simulation"
version = "0.1.0-alpha.1"
license = "MIT"
description = "plate-simulation is a Python package"
authors = ["Mira Geoscience <support@mirageoscience.com>"]
repository = "https://github.com/MiraGeoscience/plate-simulation"
homepage = "https://mirageoscience.com"
readme = "README.rst"
packages = [
     { include = "plate_simulation" },
     { include = "plate_simulation-assets" },
]

# TODO: adjust classifiers
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Natural Language :: English",
]


[tool.poetry.dependencies]
python = "^3.10, <3.11"
numpy = "~1.23.5" # also geoh5py, simpeg and geoana
scipy = "~1.10.1"
discretize = {version = "~0.10.0"}
Rtree = "~1.2.0"
trimesh = "~4.1.3"
threadpoolctl = "~3.3.0"
pydantic = {version = "~2.5", optional = true}

## pip dependencies
geoh5py = {version = "~0.9.0-alpha.0", source = "pypi", allow-prereleases = true}
#geoh5py = {url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/tags/v0.8.0-rc.2.zip#sha256="}
octree-creation-app = {version = "~0.1.0-alpha.0", source = "pypi", allow-prereleases = true}
#octree-creation-app = {url = "https://github.com/MiraGeoscience/octree-creation-app/archive/refs/heads/develop.zip#sha256="}
#geoapps-utils = {url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/GEOPY-1396.zip#sha256="}
geoapps-utils = {version = "~0.3.0a3", source = "pypi", allow-prereleases = true}
#param-sweeps = {version = "~0.1.7-alpha.3", source = "pypi", allow-prereleases = true}
simpeg-drivers = { url = "https://github.com/MiraGeoscience/simpeg-drivers/archive/refs/heads/release/0.1.0.zip#sha256=" }
param-sweeps = {url = "https://github.com/MiraGeoscience/param-sweeps/archive/refs/heads/release/0.1.7.zip#sha256="}

## indirect dependencies, forcing them here for installation through Conda not pip
dask = {version = "2022.10.*", extras = ["distributed"]}
distributed = {version = "2022.10.*"}  # because conda-lock doesn't take dask extras into account
geoana = {version = "~0.4.0"}  # from simpeg
h5py = "*" # from geoh5py
mkl = {version = "2022.*"}  # from simpeg
Pillow = "*" # from geoh5py
pydiso = {version = "~0.0.3"} # from simpeg
pymatsolver = {version = "~0.2.0"} # from simpeg
tqdm = {version = "^4.64.0"}
zarr = {version = "~2.14.2"} # from simpeg using Dask

## about pip dependencies
# to be specified to work with conda-lock
# - from PyPI: my_package = { version = "1.2.3", source = "pypi" }
# - from URL:
#   - for a tags:   my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/tags/VERSION_TAG.zip#sha256=" }
#   - for a branch: my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/heads/BRANCH.zip#sha256=" }
# Note - conda-lock does not support the syntax: my_package = { git = ... }
#        while poetry2conda supports only { git = "...", tag = "..." }, and not { url = ... }

[tool.poetry.dev-dependencies]
Pygments = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
tomli = "*"
sphinx = "^5.0"
readthedocs-sphinx-ext = "*"

[tool.conda-lock]
platforms = ['win-64', 'linux-64']
channels = ['conda-forge']

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
# defaults are just fine

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
scripts_are_modules = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true

plugins = [
#    'numpy.typing.mypy_plugin'
]

[tool.coverage.run]
branch = true
source = ["plate_simulation"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
    "if TYPE_CHECKING",
    "pragma: no cover"
]

[tool.coverage.html]
skip_empty = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
